--- a/part-5-multi-core-eb/package.json
+++ b/part-5-multi-core-eb/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.20",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "tsc": "^2.0.4",
+    "typescript": "^5.2.2"
   }
 }
