--- a/part-5-multi-core-eb/package.json
+++ b/part-5-multi-core-eb/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -b",
+    "build": "npx tsc -b",
     "start": "node dist/index.js"
   },
   "keywords": [],
